--- a/MvcMovie/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie/MvcMovie.csproj
@@ -165,6 +165,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503100104181_Initial.cs" />
+    <Compile Include="Migrations\201503100104181_Initial.Designer.cs">
+      <DependentUpon>201503100104181_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503100121242_Rating.cs" />
+    <Compile Include="Migrations\201503100121242_Rating.Designer.cs">
+      <DependentUpon>201503100121242_Rating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Movie.cs" />
@@ -593,6 +602,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201503100104181_Initial.resx">
+      <DependentUpon>201503100104181_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503100121242_Rating.resx">
+      <DependentUpon>201503100121242_Rating.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
